[tool.poetry]
name = "savage-ai-im"
version = "0.0.1"
description = "An experiment into LangChain using SavageAim as a testbed."
authors = ["freyamade"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.9.2"
pydantic-settings = "^2.6.1"
langchain-core = "^0.3.15"
langgraph = "^0.2.45"
langgraph-checkpoint-sqlite = "^2.0.1"
langchain-google-vertexai = "^2.0.7"
discord-py = "^2.4.0"
sentry-sdk = "^2.18.0"
structlog = "^24.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
